WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264056
[JSC] Fix StringAppend crash with tryMakeString in initializeDateTimeFormat
https://bugs.webkit.org/show_bug.cgi?id=264056
Summary
[JSC] Fix StringAppend crash with tryMakeString in initializeDateTimeFormat
Yijia Huang
Reported
2023-11-01 12:21:56 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2023-11-01 12:22:32 PDT
<
rdar://116647363
>
Yijia Huang
Comment 2
2023-11-01 12:31:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19855
EWS
Comment 3
2023-11-01 14:33:34 PDT
Committed
270080@main
(9a421c3685d0): <
https://commits.webkit.org/270080@main
> Reviewed commits have been landed. Closing PR #19855 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug