Cherry-pick 270080@main (9a421c3685d0). https://bugs.webkit.org/show_bug.cgi?id=264056

[JSC] Fix StringAppend crash with tryMakeString in initializeDateTimeFormat
    https://bugs.webkit.org/show_bug.cgi?id=264056
    rdar://116647363

    Reviewed by Yusuke Suzuki.

    StringAppend may crash due to string concatenation may has int32
    overflow in tryMakeStringFromAdapters. So, to fix issue, we should
    use tryMakeString instead to avoid the crash.

    * JSTests/stress/intl-data-time-format-string-overflow.js: Added.
    (async arguments):
    * Source/JavaScriptCore/runtime/IntlDateTimeFormat.cpp:
    (JSC::IntlDateTimeFormat::initializeDateTimeFormat):

    Canonical link: https://commits.webkit.org/270080@main